--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Quote App</title>
-  <link rel="stylesheet" href="/assets/styles/styles.css">
+  <link rel="stylesheet" href="./assets/styles/styles.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
@@ -18,7 +18,7 @@
       <button id="getMessage">New Quote</button>
     </div>
   </div>
-  <script type="text/javascript" src="/assets/scripts/App.js"></script>
+  <script type="text/javascript" src="./assets/scripts/App.js"></script>
 </body>
 
 </html>
